--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -5,7 +5,7 @@
   --color-text: #666;
   --color-high-text: #ff5777;
   --color-tint: #ff8198;
-  --color-background: #fff;
+  --color-background: rgb(241, 236, 236);
   --font-size: 14px;
   --line-height: 1.5;
 }
