--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -17,7 +17,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
   user-select: none; /* 禁止用户鼠标在页面上选中文字/图片等 */
@@ -33,7 +32,16 @@ a {
   text-decoration: none;
 }
 
-
+/* .clearfix:before,.clearfix:after {
+    content:"";
+    display:table; 
+}
+.clearfix:after {
+    clear:both;
+}
+.clearfix {
+    *zoom:1;
+} */
 .clear-fix::after {
   clear: both;
   content: '';
